--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ yarn-error.log*
 /logs
 /old_scripts
 instructions.sh
+.env
+
 #amplify-do-not-edit-begin
 amplify/\#current-cloud-backend
 amplify/.config/local-*
